--- a/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
@@ -112,7 +112,7 @@
 
             <ImageButton
                 android:id="@+id/allrecipe_fm_btn_search_bottom"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@android:color/transparent"
                 android:src="@drawable/btn"
