--- a/reper_front/app/src/main/res/layout/fragment_step_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_step_recipe.xml
@@ -31,10 +31,10 @@
             android:layout_marginTop="40dp"
             android:fontFamily="@font/pretendard_semibold"
             android:singleLine="true"
-            android:text="I wanna go to home"
+            android:text="메뉴명"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="32dp"
+            android:textSize="24dp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:focusable="true"
@@ -46,43 +46,61 @@
 
         <TextView
             android:id="@+id/steprecipe_fm_tv_index"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="52dp"
             android:layout_gravity="center"
-            android:layout_marginTop="16dp"
+            android:layout_marginEnd="-8dp"
             android:background="@drawable/steprecipe_index"
             android:fontFamily="@font/pretendard_semibold"
             android:gravity="center"
             android:text="매장 2잔"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_tv_menu_name" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieAnimationView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="32dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_tv_index"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_url="https://cdn.lottielab.com/l/6Y3CtYEieXZZrx.json" />
 
         <TextView
             android:id="@+id/steprecipe_fm_tv_ingredient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/pretendard_semibold"
-            android:text="재료"
+            android:text="레시피입니다. ^^"
             android:textColor="@color/black"
-            android:textSize="32sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_tv_ingredient">
+            app:layout_constraintStart_toStartOf="parent">
 
             <ImageView
                 android:id="@+id/steprecipe_fm_iv_icon_custom"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/steprecipe_notice"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +114,7 @@
                 android:fontFamily="@font/pretendard_semibold"
                 android:text="추가사항"
                 android:textColor="@color/red"
-                android:textSize="24dp"
+                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="@+id/steprecipe_fm_iv_icon_custom"
                 app:layout_constraintStart_toEndOf="@+id/steprecipe_fm_iv_icon_custom"
                 app:layout_constraintTop_toTopOf="@+id/steprecipe_fm_iv_icon_custom" />
@@ -109,11 +127,10 @@
             android:fontFamily="@font/pretendard_regular"
             android:text="무단으로 복제, 유포 시 법적 처벌을 받을수 있습니다."
             android:textColor="@color/lightgray"
-            android:textSize="16sp"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
             app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
-            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"/>
-
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
         <TextView
             android:id="@+id/steprecipe_fm_tv_user"
             android:layout_width="wrap_content"
@@ -121,31 +138,20 @@
             android:fontFamily="@font/pretendard_regular"
             android:text="이용자 : 0000@naver.com"
             android:textColor="@color/lightgray"
-            android:textSize="16sp"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:src="@drawable/steprecipe_left"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="@+id/textView3" />
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:layout_constraintBottom_toTopOf="@+id/imageView3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_tv_menu_name"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_url="https://cdn.lottielab.com/l/7s4iHVxukkaC57.json" />
 
         <TextView
             android:id="@+id/textView3"
@@ -154,7 +160,7 @@
             android:fontFamily="@font/pretendard_medium"
             android:text="이전"
             android:textColor="@color/darkgray"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:layout_marginLeft="40dp"
             android:layout_marginBottom="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -162,8 +168,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:src="@drawable/steprecipe_right"
             app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
@@ -176,7 +182,7 @@
             android:fontFamily="@font/pretendard_medium"
             android:text="다음"
             android:textColor="@color/green"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:layout_marginRight="40dp"
             android:layout_marginBottom="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
