[feat] front - xml 작업
MyPageFragment xml 작업 완료

--- a/reper_front/app/src/main/res/values/colors.xml
+++ b/reper_front/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="darkgreen">#1C4700</color>
     <color name="lightgray">#C4C4C4</color>
     <color name="darkgray">#626262</color>
+    <color name="yellow">#EDE249</color>
 </resources>
