--- a/reper_front/app/src/main/res/layout/fragment_edit_my_account.xml
+++ b/reper_front/app/src/main/res/layout/fragment_edit_my_account.xml
@@ -139,16 +139,16 @@
             app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
         <FrameLayout
-            android:id="@+id/allrecipe_fm_fl_btn_edit"
-            android:layout_width="match_parent"
+            android:id="@+id/editmyaccount_fm_fl_ten_edit"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerView">
 
             <ImageButton
-                android:id="@+id/allrecipe_fm_btn_search_bottom"
+                android:id="@+id/allrecipe_fm_btn_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@android:color/transparent"
@@ -167,6 +167,19 @@
                 android:textSize="16sp" />
 
         </FrameLayout>
+
+        <TextView
+            android:id="@+id/editmyaccount_fm_tv_deleteaccount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/pretendard_regular"
+            android:text="회원탈퇴"
+            android:textColor="@color/darkgray"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/editmyaccount_fm_fl_ten_edit"
+            app:layout_constraintTop_toBottomOf="@+id/editmyaccount_fm_fl_ten_edit" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
