--- a/reper_front/app/src/main/res/layout/dialog_delete_access.xml
+++ b/reper_front/app/src/main/res/layout/dialog_delete_access.xml
@@ -8,12 +8,12 @@
     android:background="@drawable/home_notice_dialog_back">
 
     <TextView
-        android:id="@+id/deleteaccount_d_tv_title"
+        android:id="@+id/deleteaccess_d_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/pretendard_semibold"
-        android:text="탈퇴하시겠습니까?"
+        android:text="권한을 삭제하시겠습니까?"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/deleteaccount_d_btn_delete"
+        android:id="@+id/deleteacces_d_btn_delete"
         android:layout_width="130dp"
         android:layout_height="52dp"
         android:layout_marginStart="8dp"
@@ -30,14 +30,14 @@
         android:background="@drawable/deleteaccount_delete_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/deleteaccount_d_btn_cancel"
-        app:layout_constraintTop_toBottomOf="@+id/deleteaccount_d_tv_title">
+        app:layout_constraintStart_toEndOf="@+id/deleteacces_d_btn_cancel"
+        app:layout_constraintTop_toBottomOf="@+id/deleteaccess_d_tv_title">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/pretendard_semibold"
-            android:text="회원탈퇴"
+            android:text="삭제"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -47,14 +47,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/deleteaccount_d_btn_cancel"
+        android:id="@+id/deleteacces_d_btn_cancel"
         android:layout_width="130dp"
         android:layout_height="52dp"
         android:background="@drawable/request_btn_no"
-        app:layout_constraintEnd_toStartOf="@+id/deleteaccount_d_btn_delete"
+        app:layout_constraintEnd_toStartOf="@+id/deleteacces_d_btn_delete"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/deleteaccount_d_btn_delete">
+        app:layout_constraintTop_toTopOf="@+id/deleteacces_d_btn_delete">
 
         <TextView
             android:layout_width="wrap_content"
