--- a/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@android:color/transparent"
                 android:fontFamily="@font/pretendard_regular"
-                android:hint="레시피명, 카테고리를 검색해보세요."
+                android:hint="레시피를 검색해보세요."
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -72,35 +72,64 @@
 
         <Spinner
             android:id="@+id/allrecipe_fm_sp"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:backgroundTint="@color/darkgray"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp"
             android:spinnerMode="dialog"
+            android:background="@drawable/spinner_allrecipe_category"
+            android:theme="@style/SpinnerTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/allrecipe_fm_tl"
+        <com.google.android.material.button.MaterialButtonToggleGroup
+            android:id="@+id/allrecipe_fm_btngroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/transparent"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/darkgreen"
+            app:checkedButton="@+id/fullrecipe_fm_btn_ice"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/allrecipe_fm_sp"
+            app:singleSelection="true">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/allrecipe_fm_vp2"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/allrecipe_fm_btn_step"
+                style="@style/AllRecipeCheckedToggleButtonStyle"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/pretendard_bold"
+                android:paddingHorizontal="16dp"
+                android:text="단계별 레시피"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:visibility="visible" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/allrecipe_fm_btn_full"
+                style="@style/AllRecipeBaseToggleButtonStyle"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/pretendard_bold"
+                android:text="전체 레시피"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:visibility="visible" />
+
+        </com.google.android.material.button.MaterialButtonToggleGroup>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/allrecipe_fm_rv"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/allrecipe_fm_tl" >
-
-        </androidx.viewpager2.widget.ViewPager2>
+            app:layout_constraintTop_toBottomOf="@+id/allrecipe_fm_btngroup" />
 
         <FrameLayout
             android:id="@+id/allrecipe_fm_fl_btn_search_bottom"
