--- a/reper_front/app/src/main/res/layout/fragment_my_page.xml
+++ b/reper_front/app/src/main/res/layout/fragment_my_page.xml
@@ -149,6 +149,7 @@
             android:layout_marginStart="40dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="40dp"
+            android:paddingHorizontal="24dp"
             android:spinnerMode="dropdown"
             android:background="@drawable/mypage_store_list"
             app:layout_constraintEnd_toEndOf="parent"
