--- a/reper_front/app/src/main/res/values/style.xml
+++ b/reper_front/app/src/main/res/values/style.xml
@@ -28,4 +28,37 @@
         <item name="strokeColor">@color/green</item>
         <item name="strokeWidth">2dp</item>
     </style>
+
+<!--    allrecipe-->
+    <!-- 기본 MaterialButton 스타일 -->
+    <style name="AllRecipeBaseToggleButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <!-- 버튼 배경 색상 -->
+        <item name="backgroundTint">@android:color/transparent</item>
+        <!-- 텍스트 색상 -->
+        <item name="android:textColor">@color/green</item>
+        <!-- 모서리 둥글게 -->
+        <item name="cornerRadius">16dp</item>
+        <!-- 테두리 색상 -->
+        <item name="strokeColor">@color/lightgreen</item>
+        <!-- 테두리 두께 -->
+        <item name="strokeWidth">2dp</item>
+    </style>
+
+    <!-- 선택된 버튼 스타일 -->
+    <style name="AllRecipeCheckedToggleButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="backgroundTint">@color/lightgreen</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="cornerRadius">16dp</item>
+        <item name="strokeColor">@color/lightgreen</item>
+        <item name="strokeWidth">2dp</item>
+    </style>
+
+    <style name="SpinnerDivideStyle" parent="android:style/Widget.ListView.DropDown">
+        <item name="android:divider">@color/green</item> <!-- divider 색 -->
+        <item name="android:dividerHeight">1dp</item> <!-- divider 높이 -->
+    </style>
+
+    <style name="SpinnerTheme">
+        <item name="android:dropDownListViewStyle">@style/SpinnerDivideStyle</item>
+    </style>
 </resources>
