--- a/reper_front/app/src/main/res/values/colors.xml
+++ b/reper_front/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="maingreen">#558948</color>
+    <color name="darkgreen">#1C4700</color>
+    <color name="ligtgreen">#6AB65D</color>
+    <color name="lightorange">#ED9049</color>
+    <color name="mainorange">#F26547</color>
+    <color name="bgwhite">#FCFCFC</color>
+    <color name="fontblack">#101A24</color>
+    <color name="darkgray">#626262</color>
+    <color name="lightgray">#C4C4C4</color>
 </resources>
