--- a/reper_front/app/src/main/res/layout/fragment_order.xml
+++ b/reper_front/app/src/main/res/layout/fragment_order.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.order.OrderFragment">
+    tools:context=".ui.order.OrderFragment">'
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:text="orderFragment"
+
+    <ImageView
+        android:src="@drawable/fragment_order_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+    <TextView
+        android:text="주문 내역📝"
+        android:textSize="24sp"
+        android:fontFamily="@font/pretendard_semibold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
