[feat] front - xml 작업 완료
xml 작업 완료
추가 수정사항은있음

--- a/reper_front/app/src/main/res/layout/fragment_join.xml
+++ b/reper_front/app/src/main/res/layout/fragment_join.xml
@@ -263,6 +263,7 @@
                     android:background="@drawable/login_button"
                     android:text="Join"
                     android:textColor="#FFFFFF"
+                    android:fontFamily="@font/pretendard_semibold"
                     android:textSize="18sp" />
 
             </LinearLayout>
