--- a/reper_front/app/src/main/res/drawable/join_spinner_background.xml
+++ b/reper_front/app/src/main/res/drawable/join_spinner_background.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#FFFFFF"/>
             <corners android:radius="12dp"/>
-            <stroke android:width="0.95dp" android:color="#626262"/>
+            <stroke android:width="0.95dp" android:color="@color/darkgray"/>
         </shape>
     </item>
     <!-- 드롭다운 화살표 아이콘 -->
