--- a/reper_front/app/src/main/res/layout/fragment_order_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_order_recipe.xml
@@ -1,14 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.order.OrderRecipeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginHorizontal="24dp">
 
-</FrameLayout>
+        <LinearLayout
+            android:id="@+id/fragment_order_linear_layout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="24dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/back_icon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:fontFamily="@font/pretendard_semibold"
+                android:text="주문 상세페이지"
+                android:textSize="24sp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/fragment_order_linear_layout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_order_linear_layout1">
+
+            <TextView
+                android:id="@+id/order_recipe_fragment_stepbystep_recipe_tab"
+                android:text="단계별 레시피"
+                android:textSize="20sp"
+                android:fontFamily="@font/pretendard_semibold"
+                android:textColor="@color/recipe_tab_text_color_selector"
+                android:background="@drawable/recipe_tab_background_selector"
+                android:gravity="center"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingVertical="10dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:selectable="true"/>
+
+            <TextView
+                android:id="@+id/order_recipe_fragment_all_recipe_tab"
+                android:text="전체 레시피"
+                android:textSize="20sp"
+                android:fontFamily="@font/pretendard_semibold"
+                android:textColor="@color/recipe_tab_text_color_selector"
+                android:background="@drawable/recipe_tab_background_selector"
+                android:gravity="center"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingVertical="10dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:selectable="true"/>
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/ligtgreen"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_order_linear_layout2" />
+
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
+            app:layout_constraintTop_toBottomOf="@+id/view">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fragment_order_recipe_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp" />
+
+        </FrameLayout>
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/appCompatButton"
+            android:layout_width="match_parent"
+            android:layout_height="49.36dp"
+            android:layout_marginBottom="40dp"
+            android:background="@drawable/login_button"
+            android:fontFamily="@font/pretendard_semibold"
+            android:text="주문 완료"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
