[feat] front - xml 작업
spinner 추가
- mypageFramgent
- allrecipeFragment

--- a/reper_front/app/src/main/res/layout/fragment_my_page.xml
+++ b/reper_front/app/src/main/res/layout/fragment_my_page.xml
@@ -144,6 +144,7 @@
 
         <Spinner
             android:id="@+id/mypage_fm_sp"
+            android:overlapAnchor="false"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginStart="40dp"
