--- a/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
@@ -78,12 +78,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp"
+            android:overlapAnchor="false"
             android:spinnerMode="dropdown"
-            android:background="@drawable/spinner_allrecipe_category"
-            android:theme="@style/SpinnerTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
