[feat] front - 스피너

--- a/reper_front/app/src/main/res/values/colors.xml
+++ b/reper_front/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="red">#F26547</color>
     <color name="green">#558948</color>
     <color name="yellow">#EDE249</color>
-
+    <color name="ligtgreen">#6AB65D</color>
     <color name="maingreen">#558948</color>
     <color name="darkgreen">#1C4700</color>
     <color name="lightgreen">#6AB65D</color>
