--- a/reper_front/app/src/main/res/layout/fragment_boss.xml
+++ b/reper_front/app/src/main/res/layout/fragment_boss.xml
@@ -61,7 +61,9 @@
             android:background="@drawable/spoinner_back"
             android:elevation="5dp"
             app:layout_constraintTop_toBottomOf="@+id/boss_menu"
-            tools:layout_editor_absoluteX="24dp" />
+            tools:layout_editor_absoluteX="24dp"
+            android:spinnerMode="dropdown"
+            android:overlapAnchor="false"/>
 
         <androidx.cardview.widget.CardView
             android:layout_marginStart="2dp"
