--- a/reper_front/app/src/main/res/layout/home_spinner_item.xml
+++ b/reper_front/app/src/main/res/layout/home_spinner_item.xml
@@ -7,4 +7,4 @@
     android:fontFamily="@font/pretendard_semibold"
     android:paddingVertical="12dp"
     android:paddingHorizontal="16dp"
-    android:background="@android:color/transparent"/>
+    android:background="@color/white"/>
