--- a/reper_front/app/src/main/res/layout/fragment_home.xml
+++ b/reper_front/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="60dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <Spinner
@@ -48,10 +48,10 @@
 
         <!-- 배너 위치 -->
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/fragmentHomeRvHomBanner"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/fragmentHomeVpBanner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/fragmentHomeTopConstraintLayout" />
 
@@ -64,7 +64,7 @@
             android:orientation="vertical"
             android:layout_marginTop="32dp"
             android:layout_marginHorizontal="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeRvHomBanner">
+            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeVpBanner">
 
 
 
@@ -74,7 +74,7 @@
 
                 <TextView
                     android:text="우리지점 공지사항"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
                     android:fontFamily="@font/pretendard_semibold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
 
                 <TextView
                     android:id="@+id/fragment_home_announcement_text"
-                    android:text="공지 더 보러가기"
+                    android:text="@string/announcement_text"
                     android:textColor="@color/darkgreen"
                     android:fontFamily="@font/pretendard_semibold"
                     android:clickable="true"
@@ -99,7 +99,9 @@
                 android:id="@+id/fragment_home_rv_announcement"
                 android:layout_marginTop="6dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:minHeight="220dp"
+                android:nestedScrollingEnabled="true" />
 
         </LinearLayout>
 
@@ -123,7 +125,7 @@
 
                 <TextView
                     android:text="즐겨찾는 레시피"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
                     android:fontFamily="@font/pretendard_semibold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -132,7 +134,7 @@
 
                 <TextView
                     android:id="@+id/fragment_home_like_recipe_text"
-                    android:text="레시피 더 보러가기"
+                    android:text="@string/recipe_text"
                     android:textColor="@color/darkgreen"
                     android:fontFamily="@font/pretendard_semibold"
                     android:clickable="true"
@@ -148,7 +150,8 @@
                 android:id="@+id/fragment_home_rv_like_recipe"
                 android:layout_marginTop="6dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="150dp"
+                android:nestedScrollingEnabled="true" />
 
         </LinearLayout>
 
@@ -165,7 +168,7 @@
 
             <TextView
                 android:text="현재 진행중인 주문"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:fontFamily="@font/pretendard_semibold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -177,7 +180,9 @@
                 android:id="@+id/fragment_home_rv_order"
                 android:layout_marginTop="6dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:minHeight="220dp"
+                android:nestedScrollingEnabled="true" />
 
         </LinearLayout>
 
