--- a/reper_front/app/src/main/res/layout/fragment_login.xml
+++ b/reper_front/app/src/main/res/layout/fragment_login.xml
@@ -18,7 +18,7 @@
             android:id="@+id/fragmentLoginLinearLayout1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120sp"
+            android:layout_marginTop="140sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -54,12 +54,12 @@
             android:id="@+id/fragmentLoginLinearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="276dp"
+            android:layout_marginTop="80dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/fragmentLoginLinearLayout1">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -106,10 +106,11 @@
                 android:id="@+id/fragmentLoginLoginBtn"
                 android:layout_width="match_parent"
                 android:layout_height="49.36dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/login_button"
                 android:text="Log In"
                 android:textColor="#FFFFFF"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textSize="18sp" />
 
         </LinearLayout>
