--- a/reper_front/app/src/main/res/layout/fragment_order.xml
+++ b/reper_front/app/src/main/res/layout/fragment_order.xml
@@ -28,37 +28,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
-        <Spinner
-            android:id="@+id/fragment_order_date_spinner"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="24dp"
-            android:paddingEnd="32dp"
-            android:background="@drawable/order_spinner_background"
-            android:spinnerMode="dropdown"
-            android:overlapAnchor="false"
-            android:popupBackground="@color/white"
-            app:layout_constraintStart_toStartOf="parent" />
+    <Spinner
+        android:id="@+id/fragment_order_date_spinner"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/order_spinner_background"
+        android:overlapAnchor="false"
+        android:paddingEnd="32dp"
+        android:popupBackground="@color/white"
+        android:spinnerMode="dropdown"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_order_date_spinner">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fragment_order_rv_order"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="24dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_order_date_spinner" />
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="20dp" />
 
-    </LinearLayout>
-
-
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
