--- a/reper_front/app/src/main/res/layout/fragment_order_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_order_recipe.xml
@@ -12,69 +12,64 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="24dp">
 
-        <LinearLayout
-            android:id="@+id/fragment_order_linear_layout1"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/noti_fg_back_icon"
+            android:layout_width="24dp"
+            android:layout_height="28dp"
+            android:src="@drawable/baseline_arrow_back_ios_24"
+            app:layout_constraintBottom_toBottomOf="@+id/textView"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textView"
+            style="@style/titleFontStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="24dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/back_icon" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:fontFamily="@font/pretendard_semibold"
-                android:text="주문 상세페이지"
-                android:textSize="24sp" />
-
-        </LinearLayout>
+            android:text="주문 상세페이지"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintStart_toEndOf="@+id/noti_fg_back_icon"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <LinearLayout
             android:id="@+id/fragment_order_linear_layout2"
+            android:layout_marginTop="40dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_order_linear_layout1">
+            app:layout_constraintTop_toBottomOf="@+id/textView">
 
             <TextView
                 android:id="@+id/order_recipe_fragment_stepbystep_recipe_tab"
-                android:text="단계별 레시피"
-                android:textSize="20sp"
-                android:fontFamily="@font/pretendard_semibold"
-                android:textColor="@color/recipe_tab_text_color_selector"
-                android:background="@drawable/recipe_tab_background_selector"
-                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:paddingVertical="10dp"
+                android:background="@drawable/recipe_tab_background_selector"
                 android:clickable="true"
                 android:focusable="true"
-                android:selectable="true"/>
+                android:fontFamily="@font/pretendard_semibold"
+                android:gravity="center"
+                android:paddingVertical="10dp"
+                android:selectable="true"
+                android:text="단계별 레시피"
+                android:textColor="@color/recipe_tab_text_color_selector"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/order_recipe_fragment_all_recipe_tab"
-                android:text="전체 레시피"
-                android:textSize="20sp"
-                android:fontFamily="@font/pretendard_semibold"
-                android:textColor="@color/recipe_tab_text_color_selector"
-                android:background="@drawable/recipe_tab_background_selector"
-                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:paddingVertical="10dp"
+                android:background="@drawable/recipe_tab_background_selector"
                 android:clickable="true"
                 android:focusable="true"
-                android:selectable="true"/>
+                android:fontFamily="@font/pretendard_semibold"
+                android:gravity="center"
+                android:paddingVertical="10dp"
+                android:selectable="true"
+                android:text="전체 레시피"
+                android:textColor="@color/recipe_tab_text_color_selector"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
