--- a/reper_front/app/src/main/res/layout/fragment_boss.xml
+++ b/reper_front/app/src/main/res/layout/fragment_boss.xml
@@ -1,51 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:elevation="0dp"
     android:background="@color/bgwhite"
+    android:elevation="0dp"
     tools:context=".ui.boss.BossFragment">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/top_bar"
-        android:scaleType="center"
-        android:elevation="5dp"
-        android:translationZ="5dp"
-        />
+        android:layout_height="wrap_content">
 
-</LinearLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="5dp"
+            android:scaleType="center"
+            android:src="@drawable/top_bar"
+            android:translationZ="5dp" />
+
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="40dp">
+        android:paddingHorizontal="24dp">
 
         <ImageView
             android:id="@+id/recipe_fg_back_icon"
             android:layout_width="30sp"
             android:layout_height="28sp"
-            android:src="@drawable/baseline_arrow_back_ios_24"
             android:layout_marginTop="62dp"
+            android:src="@drawable/baseline_arrow_back_ios_24"
+            android:tint="@color/bgwhite"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="UseAppTint"
-            android:tint="@color/bgwhite"
-        />
+            tools:ignore="UseAppTint" />
 
         <TextView
             android:id="@+id/boss_menu"
             style="@style/titleFontStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginTop="60dp"
+            android:gravity="center"
             android:text="사장님 메뉴"
             android:textColor="@color/bgwhite"
             app:layout_constraintStart_toEndOf="@+id/recipe_fg_back_icon"
@@ -54,55 +53,50 @@
 
         <Spinner
             android:id="@+id/boss_fg_store_spiner"
-            android:layout_marginHorizontal="2dp"
             android:layout_width="match_parent"
             android:layout_height="52sp"
+            android:layout_marginHorizontal="2dp"
             android:layout_marginTop="40dp"
-            android:background="@drawable/spoinner_back"
-            android:elevation="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/boss_menu"
-            tools:layout_editor_absoluteX="24dp"
+            android:background="@drawable/boss_spinner_background"
+            android:overlapAnchor="false"
             android:spinnerMode="dropdown"
-            android:overlapAnchor="false"/>
+            app:layout_constraintTop_toBottomOf="@+id/boss_menu"
+            tools:layout_editor_absoluteX="24dp" />
 
         <androidx.cardview.widget.CardView
-            android:layout_marginStart="2dp"
             android:id="@+id/boss_fg_notice_write"
-            android:layout_width="100dp"
+            android:layout_width="110dp"
             android:layout_height="100dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/boss_fg_store_spiner"
-            app:cardCornerRadius="8dp"
             android:elevation="5dp"
-            android:translationZ="5dp">
-
+            app:cardCornerRadius="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/boss_fg_store_spiner">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
 
-            <ImageView
-                android:layout_marginTop="8dp"
-                android:layout_width="47dp"
-                android:layout_height="47dp"
-                android:src="@drawable/ink_pen_24px"
-                tools:ignore="UseAppTint"
-                android:tint="@color/maingreen"
-                />
+                <ImageView
+                    android:layout_width="47dp"
+                    android:layout_height="47dp"
+                    android:layout_marginTop="8dp"
+                    android:src="@drawable/ink_pen_24px"
+                    android:tint="@color/maingreen"
+                    tools:ignore="UseAppTint" />
 
-        <TextView
-            android:layout_marginTop="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="공지 쓰기"
-            android:textSize="16sp"
-            android:fontFamily="@font/pretendard_regular"
-            />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/pretendard_regular"
+                    android:text="공지 쓰기"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -111,11 +105,10 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/boss_fg_notice_list"
-            android:layout_width="100dp"
+            android:layout_width="110dp"
             android:layout_height="100dp"
             android:layout_marginTop="32dp"
             android:elevation="5dp"
-            android:translationZ="5dp"
             app:cardCornerRadius="8dp"
             app:layout_constraintEnd_toStartOf="@+id/boss_fg_recipe_manage"
             app:layout_constraintStart_toEndOf="@+id/boss_fg_notice_write"
@@ -134,8 +127,8 @@
                     android:layout_height="47dp"
                     android:layout_marginTop="8dp"
                     android:src="@drawable/list_alt_24px"
-                    tools:ignore="UseAppTint"
-                    android:tint="@color/maingreen" />
+                    android:tint="@color/maingreen"
+                    tools:ignore="UseAppTint" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -152,42 +145,38 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/boss_fg_recipe_manage"
-            android:layout_marginEnd="2dp"
-            android:layout_width="100dp"
+            android:layout_width="110dp"
             android:layout_height="100dp"
             android:layout_marginTop="32dp"
-            app:cardCornerRadius = "8dp"
+            android:layout_marginEnd="2dp"
             android:elevation="5dp"
-            android:translationZ="5dp"
+            app:cardCornerRadius="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/boss_fg_store_spiner" >
-
+            app:layout_constraintTop_toBottomOf="@+id/boss_fg_store_spiner">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
 
                 <ImageView
-                    android:layout_marginTop="8dp"
                     android:layout_width="47dp"
                     android:layout_height="47dp"
+                    android:layout_marginTop="8dp"
                     android:src="@drawable/menu_book_24px"
-                    tools:ignore="UseAppTint"
                     android:tint="@color/maingreen"
-                    />
+                    tools:ignore="UseAppTint" />
 
                 <TextView
-                    android:layout_marginTop="8dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="레시피 관리"
-                    android:textSize="16sp"
+                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/pretendard_regular"
-                    />
+                    android:text="레시피 관리"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -197,22 +186,22 @@
             android:id="@+id/access"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="권한 요청 내역"
             android:layout_marginTop="32dp"
+            android:fontFamily="@font/pretendard_semibold"
+            android:text="권한 요청 내역"
             android:textSize="18sp"
-            android:fontFamily="@font/pretendard_regular"
-            app:layout_constraintTop_toBottomOf="@id/boss_fg_notice_write"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/boss_fg_notice_write" />
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/access_false_list"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginTop="24dp"
-            android:scrollbars="vertical"
+            android:layout_marginTop="28dp"
             android:scrollbarFadeDuration="0"
             android:scrollbarThumbVertical="@drawable/scroll_bar"
+            android:scrollbars="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/access" />
 
@@ -220,24 +209,23 @@
             android:id="@+id/store_employee"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="우리 가게 직원"
             android:layout_marginTop="32dp"
+            android:fontFamily="@font/pretendard_semibold"
+            android:text="우리 가게 직원"
             android:textSize="18sp"
-            android:fontFamily="@font/pretendard_regular"
-            app:layout_constraintTop_toBottomOf="@id/access_false_list"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/access_false_list" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/employee_list"
             android:layout_width="match_parent"
-            android:layout_height="212dp"
+            android:layout_height="150dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/store_employee"
-            app:layout_constraintStart_toStartOf="parent"
-            android:scrollbars="vertical"
             android:scrollbarFadeDuration="0"
             android:scrollbarThumbVertical="@drawable/scroll_bar"
-            />
+            android:scrollbars="vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_employee" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
