--- a/reper_front/app/src/main/res/layout/fragment_write_noti.xml
+++ b/reper_front/app/src/main/res/layout/fragment_write_noti.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgwhite"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.boss.WriteNotiFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="40dp"
-        >
+        android:paddingHorizontal="24dp">
 
 
         <ImageView
@@ -20,19 +19,18 @@
             android:layout_width="24dp"
             android:layout_height="28dp"
             android:src="@drawable/baseline_arrow_back_ios_24"
-            app:layout_constraintBottom_toBottomOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent"
             android:visibility="visible"
-         />
+            app:layout_constraintBottom_toBottomOf="@+id/textView"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textView"
             style="@style/titleFontStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="60dp"
             android:text="공지 쓰기"
-            android:layout_marginLeft="16dp"
             app:layout_constraintStart_toEndOf="@+id/noti_write_fg_back_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,20 +42,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="76dp"
             android:text="삭제"
-            android:textSize="18sp"
             android:textColor="@color/mainorange"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
 
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
             android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/noti_write_fg_save_btn"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:layout_editor_absoluteX="24dp">
 
@@ -67,15 +65,15 @@
                 android:layout_height="1dp"
                 android:background="@color/lightgray" />
 
-            <!-- 다른 내용들 -->
+            <!-- 제목 입력란 -->
             <EditText
                 android:id="@+id/noti_write_fg_title_ET"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:background="@android:color/transparent"
                 android:backgroundTint="@color/lightgray"
-                android:hint="제목을 입력하세요"
                 android:fontFamily="@font/pretendard_semibold"
+                android:hint="제목을 입력하세요"
                 android:textSize="18sp"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -85,37 +83,38 @@
                 android:layout_height="1dp"
                 android:background="@color/lightgray" />
 
+            <!-- 내용 입력란 -->
             <EditText
                 android:id="@+id/noti_write_fg_content_ET"
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
-                android:background="@android:color/transparent"
+                android:layout_height="0dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="16dp"
-                android:hint="내용을 입력해주세요"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
                 android:gravity="top"
-                android:layout_marginHorizontal="16dp"
-                android:scrollbars="vertical"
+                android:hint="내용을 입력해주세요"
                 android:scrollbarFadeDuration="0"
                 android:scrollbarThumbVertical="@drawable/scroll_bar"
-                />
+                android:scrollbars="vertical" />
 
+            <!-- 하단 라인 -->
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/lightgray" />
 
+            <!-- 날짜 -->
             <TextView
                 android:id="@+id/noti_fg_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:layout_marginTop="8dp"
                 android:text="2025. 01. 14"
-                android:textSize="16sp"
                 android:textColor="@color/lightgray"
-                android:layout_gravity="end"/>
-
-
+                android:textSize="16sp" />
         </LinearLayout>
 
 
@@ -124,17 +123,14 @@
             style="@style/titleFontStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="60dp"
             android:background="@drawable/butto_main"
             android:text="저장"
             android:textColor="@color/bgwhite"
-            android:layout_marginBottom="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:layout_editor_absoluteX="24dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 
 
 </FrameLayout>
