--- a/reper_front/app/src/main/res/layout/item_noti.xml
+++ b/reper_front/app/src/main/res/layout/item_noti.xml
@@ -1,46 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="78dp"
-    android:background="@color/bgwhite">
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="6dp"
+    android:layout_marginLeft="1dp"
+    android:layout_marginRight="12dp"
+    android:background="@color/bgwhite"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="8dp">
 
-    <androidx.cardview.widget.CardView
-
-        android:id="@+id/cardView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginEnd="12dp"
-        android:elevation="5dp"
-        android:translationZ="1dp"
-        app:cardCornerRadius="8dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="18dp">
 
-    <TextView
-        android:id="@+id/noti_item_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:elevation="8dp"
-        android:text="🌟공지제목이 들어갈 예정입니다"
-        android:textColor="@color/fontblack"
-        android:textSize="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/item_noti_title"
+            android:text="🔥내용🔥 멋쟁이 우리팀들 화이팅!!"
+            android:textSize="16sp"
+            android:fontFamily="@font/pretendard_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/item_noti_time"
+            android:text="1분전"
+            android:textSize="12sp"
+            android:textColor="@color/lightgray"
+            android:fontFamily="@font/pretendard_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/noti_item_upload_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
-        android:elevation="8dp"
-        android:text="게시시간"
-        android:textColor="@color/lightgray"
-        app:layout_constraintEnd_toEndOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@+id/noti_item_title" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
