--- a/reper_front/app/src/main/res/layout/fragment_order_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_order_recipe.xml
@@ -73,12 +73,12 @@
 
         </LinearLayout>
 
-        <View
+        `<View
             android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/ligtgreen"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_order_linear_layout2" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_order_linear_layout2" />`
 
 
         <FrameLayout
