--- a/reper_front/app/src/main/res/layout/fragment_step_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_step_recipe.xml
@@ -11,7 +11,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:paddingBottom="60dp">
 
         <ImageButton
             android:id="@+id/steprecipe_fm_btn_back"
@@ -28,18 +29,18 @@
             android:id="@+id/steprecipe_fm_tv_menu_name"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="60dp"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:fontFamily="@font/pretendard_semibold"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
             android:singleLine="true"
             android:text="메뉴명"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="24dp"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:scrollHorizontally="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
